# mapwisefox

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run_metrics.sh
.github/workflows/: auto-tag.yml  ci.yml  docker.yml
assistant/: pyproject.toml
assistant/src/mapwisefox/assistant/: __init__.py  __main__.py  _base.py  _study_selection.j2  _study_selection.py
assistant/src/mapwisefox/assistant/config/: __init__.py  _types.py
assistant/src/mapwisefox/assistant/instrumentation/: __init__.py  _timer.py
assistant/src/mapwisefox/assistant/judge/: __init__.py  _cli.py  _study_qa.j2  _study_qa.py
assistant/src/mapwisefox/assistant/study_selection/: __init__.py  _study_selection.py
assistant/src/mapwisefox/assistant/tools/: __init__.py  _pdf.py  dataframe.py  extras.py  fileprovider.py  j2.py  urlparse.py
assistant/src/mapwisefox/assistant/tools/llm/: __init__.py  _anthropic.py  _bedrock.py  _google.py  _ollama.py  _openai.py  _provider.py  _types.py
assistant/src/mapwisefox/assistant/tools/pdf/: __init__.py  _base.py  _caching.py  _docling.py  _layout_extractor.py  _pdf.py  _preprocessor.py  _text_extractor.py  _types.py
deduplication/: pyproject.toml
deduplication/src/mapwisefox/deduplication/: __main__.py  _deduper.py  _input_loaders.py
kappa-score/: pyproject.toml
kappa-score/src/mapwisefox/kappa_score/: __main__.py
metrics/: pyproject.toml
metrics/src/mapwisefox/metrics/: __init__.py  __main__.py  _ccc.py  _cli.py  _group.py  _icc.py  _kappa_score.py  _types.py  _utils.py  _validators.py
metrics/src/mapwisefox/metrics/categorical/: __init__.py  _cli.py
metrics/src/mapwisefox/metrics/continuous/: __init__.py  _ccc.py  _cli.py  _cli_util.py  _icc.py  _many_to_many.py  _one_to_one.py
metrics/src/mapwisefox/metrics/kappa_score/: __init__.py
metrics/tests/: test_icc.py
metrics/tests/mapwisefox/test_metrics/: test_ccc.py  test_icc.py
search/: pyproject.toml
search-judge/: pyproject.toml
search-judge/src/mapwisefox/search_judge/: __main__.py  _base.py  _llm.py  _quality.py  _utils.py
search/src/mapwisefox/search/: __init__.py  __main__.py  _enum.py  _expr.py  _qb.py
search/src/mapwisefox/search/adapters/: __init__.py  _acm.py  _base.py  _expr_tree.py  _flat_output.py  _science_direct.py  _scopus.py  _springer.py  _wos.py  _xplore.py
search/src/mapwisefox/search/backends/: __init__.py  _base.py  _console.py  _science_direct.py  _scopus.py  _springer.py  _wos.py
search/src/mapwisefox/search/parser/: __init__.py  _base.py  _ir.py  _parser.py  grammar.lark  grammar.y
search/src/mapwisefox/search/parser/backends/: __init__.py  _scopus.py  _springer.py
search/src/mapwisefox/search/persistence/: __init__.py  _base.py  _csv.py  _pickle.py
search/tests/: conftest.py
search/tests/data/: valid_expressions.txt
search/tests/mapwisefox/search/parser/: conftest.py  test_base.py  test_lark_parser.py  test_parser.py  test_scopus_backend.py  test_springer_backend.py
snowballing/: pyproject.toml
snowballing/src/mapwisefox/snowballing/: __cli.py  __init__.py  __main__.py
split/: pyproject.toml
split/src/mapwisefox/split/: __init__.py  __main__.py  _assignment.py  _qa_assignment.py  _simple.py
web/: Dockerfile  pyproject.toml
web/assets/: style.css
web/backend/: pyproject.toml
web/backend/src/mapwisefox/web/: __main__.py  _fast_api.py
web/backend/src/mapwisefox/web/config/: __init__.py  _const.py  _deps.py  _settings.py
web/backend/src/mapwisefox/web/controller/: __init__.py  _auth.py  _deps.py  _evidence.py  _evidence_viewmodel.py  _home.py
web/backend/src/mapwisefox/web/model/: __init__.py  _evidence.py  _repo.py  _user.py
web/backend/src/mapwisefox/web/utils/: __init__.py  _key_cache.py  _react.py  _staticfiles.py  _type_conversions.py
web/backend/src/mapwisefox/web/view/: __init__.py  _tpl.py
web/backend/src/mapwisefox/web/view/templates/: _base.j2  form.j2  home.j2
web/backend/tests/mapwisefox/test_web/model/: conftest.py
web/backend/tests/mapwisefox/test_web/model/data/: pandas_repo_valid_input.xlsx
web/backend/tests/model/: test_evidence.py  test_pandas_repo.py
web/backend/tests/model/data/: pandas_repo_valid_input.xlsx
web/frontend/: .bumpversion.toml  README.md  package-lock.json  package.json  tbump.toml  vite.config.ts
web/frontend/src/: main.ts
web/frontend/src/components/: Hello.tsx  InclusionStatus.module.css  InclusionStatus.tsx  SelectionCriteriaForm.tsx  SelectionCriterion.tsx
web/frontend/src/models/: transfer.ts  viewmodel.ts
web/frontend/src/pages/: EvidenceEditor.module.css  EvidenceEditor.tsx
web/frontend/src/styles/: form.css
web/src/mapwisefox/frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
web/src/mapwisefox/frontend/src/: main.ts
web/src/mapwisefox/frontend/src/components/: InclusionStatus.tsx
web/src/mapwisefox/frontend/src/pages/: EvidenceEditor.tsx
web/src/mapwisefox/static/: style.css
web/src/mapwisefox/web/: _fast_api.py  _settings.py
web/src/mapwisefox/web/config/: __init__.py  _const.py  _deps.py  _settings.py
web/src/mapwisefox/web/controller/: _auth.py  _deps.py  _evidence.py  _evidence_viewmodel.py  _home.py
web/src/mapwisefox/web/model/: __init__.py  _evidence.py  _repo.py
web/src/mapwisefox/web/static/: __init__.py  form.css  home.css
web/src/mapwisefox/web/utils/: __init__.py  _react.py
web/src/mapwisefox/web/view/templates/: _base.j2  form.j2  home.j2
web/tests/model/: conftest.py  test_evidence.py  test_pandas_repo.py
web/tests/model/data/: .~lock.pandas_repo_valid_input.xlsx#  pandas_repo_valid_input.xlsx
