[project]
name = "mapwisefox"
version = "0.1.0"
description = "Utilities for creating systematic literature reviews"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "deduplication",
    "kappa-score",
    "search",
    "search-judge",
    "snowballing",
    "split",
    "web"
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
