[project]
name = "mapwisefox-assistant"
version = "0.2.0-dev1"
dependencies = [
    "bibtexparser>=1.4.3",
    "jinja2>=3.1.6",
    "ollama>=0.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
]

[project.scripts]
assistant = "mapwisefox.assistant:run_command"

[tool.uv]
package = true

[tool.bumpversion]
current_version = "0.2.0-dev1"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:-(?P<pre_label>[a-zA-Z-]+)(?P<pre_number>:0|[1-9]\\d*))?
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_label}{pre_number}",
    "{major}.{minor}.{patch}",
]

search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "assistant-v{new_version}"
tag_message = "Bump assistant version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump assistant version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.bumpversion.parts.pre_label]
values = ["dev", "final"]
optional_value= "final"

[tool.bumpversion.parts.pre_number]
first_value = 1
