[project]
name = "mapwisefox-deduplication"
version = "0.1.0"

dependencies = [
    "bibtexparser>=1.4.3",
    "dedupe>=3.0.3",
    "pandas>=2.3.0",
]

[project.scripts]
deduplicate = "mapwisefox.deduplication:run_command"

[tool.tbump]
github_url = "https://github.com/koosie0507/mapwisefox"

[tool.tbump.version]
current = "0.1.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump deduplication package to {new_version}"
tag_template = "deduplication-v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'
