[project]
name = "mapwisefox-search-judge"
version = "0.1.0"
dependencies = [
    "bibtexparser>=1.4.3",
    "jinja2>=3.1.6",
    "ollama>=0.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
]

[project.scripts]
search-judge = "mapwisefox.search_judge:run_command"

[tool.uv]
package = true

[tool.tbump]
github_url = "https://github.com/koosie0507/mapwisefox"

[tool.tbump.version]
current = "0.1.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump search-judge package to {new_version}"
tag_template = "search-judge-v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'