[project]
name = "mapwisefox-search"
version = "0.1.0"
dependencies = [
    "clarivate-wos-starter-python-client",
    "dotenv>=0.9.9",
    "pandas>=2.3.0",
    "requests>=2.32.4",
]

[project.scripts]
search = "mapwisefox.search:run_command"

[tool.uv.sources]
clarivate-wos-starter-python-client = { git = "https://github.com/clarivate/wosstarter_python_client.git" }

[tool.bumpversion]
current_version = "0.6.1-dev1"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:-(?P<pre_label>[a-zA-Z-]+)(?P<pre_number>:0|[1-9]\\d*))?
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_label}{pre_number}",
    "{major}.{minor}.{patch}",
]

search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "search-v{new_version}"
tag_message = "Bump search version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump search version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.bumpversion.parts.pre_label]
values = ["dev", "final"]
optional_value= "final"

[tool.bumpversion.parts.pre_number]
first_value = 1