[project]
name = "mapwisefox-snowballing"
version = "0.1.0"
dependencies = [
    "asyncclick>=8.2.2.2",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "meta-paper>=0.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "requests>=2.32.4",
]

[project.scripts]
snowball = "mapwisefox.snowballing:run_command"

[tool.uv]
package = true

[tool.bumpversion]
current_version = "0.6.0"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:-(?P<pre_label>[a-zA-Z-]+)(?P<pre_number>:0|[1-9]\\d*))?
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_label}{pre_number}",
    "{major}.{minor}.{patch}",
]

search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "snowballing-v{new_version}"
tag_message = "Bump snowballing version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump snowballing version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.bumpversion.parts.pre_label]
values = ["dev", "final"]
optional_value= "final"

[tool.bumpversion.parts.pre_number]
first_value = 1

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.0.250703",
]
