[project]
name = "mapwisefox-split"
version = "0.1.0"
dependencies = [
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
]

[project.scripts]
split = "mapwisefox.split:run_command"

[tool.tbump]
github_url = "https://github.com/koosie0507/mapwisefox"

[tool.tbump.version]
current = "0.1.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump split package to {new_version}"
tag_template = "split-v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'