[project]
name = "mapwisefox-web"
version = "0.1.0"
dependencies = [
    "authlib>=1.6.0",
    "cachetools>=6.1.0",
    "fastapi[all]>=0.115.14",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
web = "mapwisefox.web:run_command"
