[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mapwisefox-web-backend"
version = "0.4.0"
dependencies = [
    "arrow>=1.3.0",
    "authlib>=1.6.0",
    "cachetools>=6.1.0",
    "fastapi[all]>=0.115.14",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
web = "mapwisefox.web:run_command"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "mapwisefox"
namespace = true
