[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mapwisefox-web-backend"
version = "0.6.0"
dependencies = [
    "arrow>=1.3.0",
    "authlib>=1.6.0",
    "cachetools>=6.1.0",
    "fastapi[all]>=0.115.14",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
web = "mapwisefox.web:run_command"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "mapwisefox"
namespace = true

[tool.tbump]
github_url = "https://github.com/koosie0507/mapwisefox"

[tool.tbump.version]
current = "0.6.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump web-backend package to {new_version}"
tag_template = "web-backend-v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'