[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mapwisefox-web-backend"
version = "0.6.1-dev1"
dependencies = [
    "arrow>=1.3.0",
    "authlib>=1.6.0",
    "cachetools>=6.1.0",
    "fastapi[all]>=0.115.14",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
web = "mapwisefox.web:run_command"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "mapwisefox"
namespace = true

[tool.bumpversion]
current_version = "0.6.1-dev1"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:-(?P<pre_label>[a-zA-Z-]+)(?P<pre_number>:0|[1-9]\\d*))?
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_label}{pre_number}",
    "{major}.{minor}.{patch}",
]

search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "web-backend-v{new_version}"
tag_message = "Bump web-backend version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump web-backend version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.bumpversion.parts.pre_label]
values = ["dev", "final"]
optional_value= "final"

[tool.bumpversion.parts.pre_number]
first_value = 1